// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem tests should call toggle nav when on mobile 1`] = `
<li>
  <Link
    className="Link mobile"
    onClick={[MockFunction]}
    to="/to"
  >
    <span
      className="iconWrapper"
    >
      <Mail
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
  </Link>
</li>
`;

exports[`NavItem tests should render a link correctly 1`] = `
<li>
  <Link
    className="Link"
    onClick={null}
    to="/to"
  >
    <span
      className="iconWrapper"
    >
      <Mail
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
  </Link>
</li>
`;

exports[`NavItem tests should render a link with beta tag 1`] = `
<li>
  <Link
    className="Link"
    onClick={null}
    to="/to"
  >
    <span
      className="iconWrapper"
    >
      <Mail
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
    <div
      className="releaseTag"
    >
      <Tag>
        BETA
      </Tag>
    </div>
  </Link>
</li>
`;

exports[`NavItem tests should render a link with labs tag 1`] = `
<li>
  <Link
    className="Link"
    onClick={null}
    to="/to"
  >
    <span
      className="iconWrapper"
    >
      <Mail
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
    <div
      className="releaseTag"
    >
      <Tag>
        LABS
      </Tag>
    </div>
  </Link>
</li>
`;

exports[`NavItem tests should render a link with new tag 1`] = `
<li>
  <Link
    className="Link"
    onClick={null}
    to="/to"
  >
    <span
      className="iconWrapper"
    >
      <Mail
        className="icon"
        size={21}
      />
    </span>
    <div
      className="Label"
    >
      label
    </div>
    <div
      className="releaseTag"
    >
      <Tag
        color="blue"
      >
        NEW
      </Tag>
    </div>
  </Link>
</li>
`;
